capsicum.7: reference pdfork.2 not procdesc.7
No real need for procdesc.7, anything relevant can be covered in
pdfork.2.

Signed-off-by: David Drysdale <drysdale@google.com>

--- a/man7/capsicum.7
+++ b/man7/capsicum.7
@@ -80,7 +80,7 @@ cleared.
 are file descriptors representing processes, allowing parent processes to manage
 child processes without requiring access to the PID namespace, and are described in
 greater detail in
-.BR procdesc (7).
+.BR pdfork (2).
 .SH VERSIONS
 Capsicum support is available in the kernel since version 3.???.
 .SH SEE ALSO
@@ -92,6 +92,5 @@ Capsicum support is available in the kernel since version 3.???.
 .BR pdgetpid (2),
 .BR pdkill (2),
 .BR pdwait4 (2),
-.BR procdesc (7),
 .BR rights (7)
 
