--- a/man2/execveat.2
+++ b/man2/execveat.2
@@ -73,12 +73,24 @@ is ignored.
 
 If
 .I pathname
-is NULL, then the file descriptor
+is an empty string and the
+.BR AT_EMPTY_PATH
+flag is specified, then the file descriptor
 .I fd
 specifies the file to be executed.
 
 .I flags
-can either be 0, or include the following flag:
+can either be 0, or include the following flags:
+.TP
+.BR AT_EMPTY_PATH
+If
+.I pathname
+is an empty string, operate on the file referred to by
+.IR fd
+(which may have been obtained using the
+.BR open (2)
+.B O_PATH
+flag).
 .TP
 .B AT_SYMLINK_NOFOLLOW
 If the file identified by
