open_by_handle_at.2: equivalent FreeBSD system call is fhopen
Signed-off-by: David Drysdale <drysdale@google.com>

--- a/man2/open_by_handle_at.2
+++ b/man2/open_by_handle_at.2
@@ -355,7 +355,7 @@ These system calls are nonstandard Linux extensions.
 FreeBSD has a broadly similar pair of system calls in the form of
 .BR getfh ()
 and
-.BR openfh ().
+.BR fhopen ().
 .SH NOTES
 A file handle can be generated in one process using
 .BR name_to_handle_at ()
